learn-k8s/pod-label-anotation.yaml
apiVersion: v1

kind: Pod
metadata:
  name: nginx
  labels:
    label-key: label-value
    learn: value
  anotations:
    descirption: ini adalah deskripsi kita

spec:
  containers:
  - name: nginx
    image: nginx:1.14.2
    ports:
    - containerPort: 80
