learn-k8s/pod-label.yaml
apiVersion: v1

kind: Pod
metadata:
  name: nginx
  labels:
    label-key: label-value
    app: nginx

spec:
  containers:
  - name: nginx
    image: nginx:1.14.2
    ports:
    - containerPort: 80
