learn-k8s/load-balancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: developer
spec:
  type: LoadBalancer
  selector:
    app: nginx
  ports:
  - port: 8000
    targetPort: 80
    nodePort: 3773
