learn-k8s/node-port.yaml
apiVersion: v1
kind: Service
metadata:
  name: developer
spec:
  type: NodePort
  selector:
    app: nginx
  ports:
  - port: 8000
    targetPort: 80
    nodePort: 3773
