learn-k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: developer
spec:
  selector:
    app: nginx
  ports:
  - port: 8000
    targetPort: 80
